--- a/src/components/FeedItem.astro
+++ b/src/components/FeedItem.astro
@@ -169,7 +169,7 @@ const linkProps = linkAttrs.props;
 				</div>
 			</div>
 
-			<div class="flex flex-col gap-2 pt-3 px-2 mt-auto">
+			<div class="flex flex-col gap-2 mt-auto mx-2 mb-2">
 				<div
 					class="flex flex-wrap items-center gap-x-1.5 gap-y-0.5 text-xs text-tx-2 leading-snug"
 				>
